--- a/index.html
+++ b/index.html
@@ -1,36 +1,124 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <title>Socket.IO chat</title>
     <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-      #messages { margin-bottom: 40px }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: "Montserrat", sans-serif;
+        background: hsl(0, 0%, 5%);
+        color: hsl(0, 0%, 95%);
+        height: 100vh;
+        padding-top: 2rem;
+      }
+      form {
+        padding: 3px;
+        position: fixed;
+        bottom: 1rem;
+        width: 90%;
+        left: 5%;
+        display: flex;
+        background: hsla(0, 0%, 5%, 0.5);
+      }
+      form input {
+        font-size: 1.5rem;
+        border: 0;
+        padding: 0.7rem;
+        width: 50%;
+        background: hsl(195, 30%, 80%);
+        margin-right: 1rem;
+        flex-grow: 1;
+      }
+      form button {
+        font-size: 1rem;
+        font-weight: 800;
+        color: hsl(0, 0%, 95%);
+        background-color: hsl(195, 30%, 25%);
+        border: none;
+        padding: 0.5rem 1rem;
+      }
+      #messages {
+        list-style-type: none;
+        margin: 0 auto;
+        padding: 0;
+        width: 90%;
+        font-size: 1.2rem;
+      }
+      #messages li {
+        padding: 1rem 1rem;
+        margin-bottom: 1rem;
+        background: hsl(0, 0%, 10%);
+      }
+      #messages li small {
+        font-size: 0.75rem;
+      }
+      #messages li:nth-child(odd) {
+        background: hsl(0, 0%, 20%);
+      }
+      #messages {
+        margin-bottom: 5rem;
+      }
+      .rounded {
+        border-radius: 0.3rem;
+      }
+      .done p {
+        text-decoration: line-through;
+      }
     </style>
   </head>
   <body>
     <ul id="messages"></ul>
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input class="rounded" id="m" autocomplete="off" /><button
+        class="rounded"
+      >
+        Send
+      </button>
     </form>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
-      $(function () {
+      const createMessage = msg => {
+          const date = new Date(msg.date);          
+          const $d = $("<small>").text(date.getHours()+" : "+date.getMinutes());
+          const $t = $("<p>").text(msg.text);
+          return $('<li class="rounded">')
+            .html($d.add($t))
+            .click(function() {
+              $(this).toggleClass("done");
+            });
+          }
+
+      $(function() {
         var socket = io();
-        $('form').submit(function(){
-          socket.emit('chat message', $('#m').val());
-          $('#m').val('');
+        $("form").submit(function() {
+          socket.emit("chat message", $("#m").val());
+          $("#m").val("");
           return false;
         });
-        socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').text(msg));
+        socket.on("chat message", function(msg) {
+          $("#messages").append(createMessage(JSON.parse(msg)));
+          window.scrollTo(0, document.body.scrollHeight);          
+        });
+        socket.on("history", function(msg) {
+          const messages = JSON.parse(msg);
+          messages.forEach(message => {            
+            $("#messages").append(createMessage(message));
+          });
           window.scrollTo(0, document.body.scrollHeight);
         });
       });
