--- a/index.html
+++ b/index.html
@@ -23,55 +23,62 @@
         background: hsl(0, 0%, 5%);
         color: hsl(0, 0%, 95%);
         height: 100vh;
-        padding-top: 2rem;
-      }
-      form {
-        padding: 3px;
-        position: fixed;
-        bottom: 1rem;
-        width: 90%;
-        left: 5%;
+        padding: 2rem 1rem 1rem 1rem;
         display: flex;
-        background: hsla(0, 0%, 5%, 0.5);
+        flex-direction: column;
+        letter-spacing: 0.07rem;
+        line-height: 1.5;
+      }
+      form {               
+        display: flex;
+        margin-top: auto;        
       }
       form input {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         border: 0;
         padding: 0.7rem;
-        width: 50%;
+        color: #364e56;        
         background: hsl(195, 30%, 80%);
         margin-right: 1rem;
+        width:70%;
         flex-grow: 1;
       }
       form button {
         font-size: 1rem;
         font-weight: 800;
-        color: hsl(0, 0%, 95%);
+        color: hsl(194, 29%, 80%);
         background-color: hsl(195, 30%, 25%);
-        border: none;
+        border: none;        
         padding: 0.5rem 1rem;
+        flex-grow: 0.1;
       }
       #messages {
         list-style-type: none;
-        margin: 0 auto;
+        margin-bottom: 1rem;
         padding: 0;
-        width: 90%;
-        font-size: 1.2rem;
+        overflow-y: scroll;
       }
       #messages li {
         padding: 1rem 1rem;
         margin-bottom: 1rem;
         background: hsl(0, 0%, 10%);
       }
-      #messages li small {
-        font-size: 0.75rem;
-      }
+      
       #messages li:nth-child(odd) {
         background: hsl(0, 0%, 20%);
+      }   
+
+      #messages li small {
+        font-size: 0.75rem;
+        display: block;
+        color: #8d9a9e;
       }
-      #messages {
-        margin-bottom: 5rem;
+
+      #messages li p {
+        color: #71bacc;
+        letter-spacing: 0.10rem;
       }
+
       .rounded {
         border-radius: 0.3rem;
       }
