--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
 <body>
   <ul id="messages"></ul>
   <form action="">
-    <input class="rounded" id="m" autocomplete="off" /><button class="rounded">
+    <input id="m" autocomplete="off" />
+    <button>
       Send
     </button>
   </form>
