--- a/src/handler.html
+++ b/src/handler.html
@@ -7,16 +7,17 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Handler chat - login</title>
+    <title>Handler chat - handler</title>
   </head>
 
   <body>
-    <form action="/login" method="POST">
-      <input id="name" autocomplete="off" name="name" />
-      <input id="password" autocomplete="off" name="password" type="password" />
+    <ul id="messages"></ul>
+    <form action="">
+      <input id="m" autocomplete="off" />
       <button>
         Send
       </button>
     </form>
+    <script src="./main.js"></script>
   </body>
 </html>
