--- a/src/handler.html
+++ b/src/handler.html
@@ -13,8 +13,8 @@
 
   <body>
     <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" />
+    <form id="handler-form" class="io-form" action="">
+      <input name="text" autocomplete="off" />
       <button>
         Send
       </button>
