--- a/src/login.html
+++ b/src/login.html
@@ -12,9 +12,15 @@
   </head>
 
   <body>
-    <form action="/login" method="POST">
-      <input id="name" autocomplete="off" name="name" />
-      <input id="password" autocomplete="off" name="password" type="password" />
+    <h1 class="caption">Login:</h1>
+    <form id="login-form" action="/login" method="POST">
+      <input placeholder="name" autocomplete="off" name="name" />
+      <input
+        placeholder="password"
+        autocomplete="off"
+        name="password"
+        type="password"
+      />
       <button>
         Send
       </button>
